Changes for configuring sql failover

--- a/templates/radiusd.conf.j2
+++ b/templates/radiusd.conf.j2
@@ -780,6 +780,11 @@ instantiate {
 	#	sql1
 	#	sql2
 	#}
+	redundant-load-balance sql {
+		crdb1
+		crdb2
+		crdb3
+	}
 }
 
 ######################################################################
