fix mod-sql template

--- a/templates/mod-sql.j2
+++ b/templates/mod-sql.j2
@@ -24,7 +24,7 @@
 #  for more information.
 #
 
-sql {{ freeradius_db }} {
+sql {{ freeradius_db_host }} {
 	#
 	#  The dialect of SQL being used.
 	#
