--- a/templates/mod-sql.j2
+++ b/templates/mod-sql.j2
@@ -264,11 +264,11 @@ sql {{ freeradius_db_host }} {
 
 	# This entry should be used for additional instances (sql foo {})
 	# of the SQL module.
-#	group_attribute = "${.:instance}-SQL-Group"
+	group_attribute = "${.:instance}-SQL-Group"
 
 	# This entry should be used for the default instance (sql {})
 	# of the SQL module.
-	group_attribute = "SQL-Group"
+#	group_attribute = "SQL-Group"
 
 	# Read database-specific queries
 	$INCLUDE ${modconfdir}/${.:name}/main/${dialect}/queries.conf
