Changes to sql templates

--- a/templates/mod-sql.j2
+++ b/templates/mod-sql.j2
@@ -24,7 +24,7 @@
 #  for more information.
 #
 
-sql {{ freeradius_db_host }} {
+sql {{ freeradius_db_host.name }} {
 	#
 	#  The dialect of SQL being used.
 	#
@@ -115,7 +115,7 @@ sql {{ freeradius_db_host }} {
 	
 	# Postgreql doesn't take tls{} options in its module config like mysql does - if you want to
 	# use SSL connections then use this form of connection info parameter
-	radius_db = "host={{ freeradius_db_host }} port={{ freeradius_db_port }} dbname={{ freeradius_db_name }} user={{ freeradius_db_user }} password={{ freeradius_db_password }} sslmode=require " # sslcert=/home/tjd/.cockroach-certs/client.localhost.crt sslkey=/home/tjd/.cockroach-certs/client.localhost.key sslrootcert=/home/tjd/.cockroach-certs/ca.crt" 
+	radius_db = "host={{ freeradius_db_host.address }} port={{ freeradius_db_port }} dbname={{ freeradius_db_name }} user={{ freeradius_db_user }} password={{ freeradius_db_password }} sslmode=require " # sslcert=/home/tjd/.cockroach-certs/client.localhost.crt sslkey=/home/tjd/.cockroach-certs/client.localhost.key sslrootcert=/home/tjd/.cockroach-certs/ca.crt" 
 
 	# If you want both stop and start records logged to the
 	# same SQL table, leave this as is.  If you want them in
