feat: Add sqlippool configs for each db

--- a/templates/radiusd.conf.j2
+++ b/templates/radiusd.conf.j2
@@ -685,6 +685,11 @@ instantiate {
 		{{ db.name }}
 		{% endfor %}
 	}
+	redundant-load-balance sqlippool {
+		{% for db in freeradius_db_hosts %}
+		ippool-{{ db.name }}
+		{% endfor %}
+	}
 }
 
 ######################################################################
