fix: correct_escapes

--- a/templates/radiusd.conf.j2
+++ b/templates/radiusd.conf.j2
@@ -258,6 +258,7 @@ hostname_lookups = no
 #
 regular_expressions	= yes
 extended_expressions	= yes
+correct_escapes = yes
 
 #
 #  Logging section.  The various "log_*" configuration items
