Add ansible managed comments to template files

--- a/templates/sqlippool.j2
+++ b/templates/sqlippool.j2
@@ -1,3 +1,5 @@
+# {{ ansible_managed }}
+#
 #  Configuration for the SQL based IP Pool module (rlm_sqlippool)
 #
 #  The database schemas are available at:
